// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppBar ACT theme matches the snapshot 1`] = `
<div>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed mui-fixed css-n50rvp-MuiPaper-root-MuiAppBar-root"
  />
</div>
`;

exports[`AppBar ACT_ET theme matches the snapshot 1`] = `
<div>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed mui-fixed css-a4phuo-MuiPaper-root-MuiAppBar-root"
  />
</div>
`;

exports[`AppBar ENCOURA theme matches the snapshot 1`] = `
<div>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed mui-fixed css-10bwbi4-MuiPaper-root-MuiAppBar-root"
  />
</div>
`;

exports[`AppBar ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed mui-fixed css-8dz36x-MuiPaper-root-MuiAppBar-root"
  />
</div>
`;

exports[`AppBar ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionStatic css-1nwrxvy-MuiPaper-root-MuiAppBar-root"
  />
</div>
`;
